# reproduce

./: .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Dockerfile  NOTICE  README.md  kafka.conf  version.h.in
.github/workflows/: ci.yml
confd/: REproduce_change_conf.sh
confd/conf.d/: REproduce.conf.toml
confd/templates/: REproduce.conf.tmpl
ext/: READEME.txt  arp.h  ethernet.h  icmp.h  ipv4.h  service.h  tcp.h  udp.h  util.h
src/: CMakeLists.txt  config.cpp  config.h  config.rs  controller.cpp  controller.h  controller.rs  conv.h  converter.cpp  converter.h  converter.rs  demo.cpp  entropy_calculator.cpp  entropy_calculator.h  event.h  fluentd.rs  forward_proto.cpp  forward_proto.h  header2log.c  header2log.cpp  header2log.h  kafka_producer.c  lib.rs  logConv.cpp  logconv.cpp  logconv.h  main.cpp  main.rs  matcher.cpp  matcher.h  matcher.rs  options.cpp  options.h  producer.cpp  producer.h  producer.rs  rdkafka.h  rdkafka_producer.cpp  rdkafka_producer.h  report.cpp  (+8 more)
tests/: CMakeLists.txt  README.txt  sample.pcap  sample.rule  t_config.cpp  t_converter.cpp  t_entropy.cpp  t_forward_proto.cpp  t_matcher.cpp  t_producer.cpp  t_session.cpp
