[package]
name = "eventlib"
version = "0.1.0"
authors = ["Min Kim <msk@dolbo.net>"]
edition = "2018"

[lib]
name = "event"
crate-type = ["staticlib"]

[dependencies]
byteorder = "1.3"
eventio = { git = "https://github.com/petabi/eventio", tag = "0.1.0" }
libc = "0.2"
rmp-serde = "0.14"
serde = "1"
serde_bytes = "0.11"
thiserror = "1"
