[package]
name = "eventlib"
version = "0.1.0"
authors = ["Min Kim <msk@dolbo.net>"]
edition = "2018"

[lib]
name = "event"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1"
byteorder = "1.3"
eventio = "0.5"
hyperscan = { version = "0.2", features = ["static"] }
libc = "0.2"
rmp-serde = "0.15"
serde = "1"
serde_bytes = "0.11"
thiserror = "1"
openssl = {version = "0.10", features = ["vendored"] }
