[package]
name = "reproduce"
version = "0.10.0"
authors = ["Min Kim <msk@dolbo.net>"]
edition = "2018"

[dependencies]
anyhow = "1"
byteorder = "1.3"
bytesize = "1"
chrono = "0.4"
clap = { version = "2", features = ["wrap_help"] }
ctrlc = { version = "3", features = ["termination"] }
eventio = "0.6"
kafka = { version = "0.8", default-features = false }
regex = "1"
rmp-serde = "0.15"
serde = "1"
serde_bytes = "0.11"
thiserror = "1"
walkdir = "2"
